ver 0.21.24 (not yet released)
* protocol
  - "tagtypes" requires no permissions
* database
  - simple: fix crash when mounting twice
* decoder
  - wildmidi: attempt to detect WildMidi using pkg-config
* Android
  - fix build failure with Android NDK r21
* Windows
  - work around Meson bug breaking the Windows build with GCC 10
* fix unit test failure

ver 0.21.23 (2020/04/23)
* protocol
  - add tag fallback for AlbumSort
* storage
  - curl: fix corrupt "href" values in the presence of XML entities
  - curl: unescape "href" values
* input
  - nfs: fix crash bug
  - nfs: fix freeze bug on reconnect
* decoder
  - gme: adapt to API change in the upcoming version 0.7.0
* output
  - alsa: implement channel mapping for 5.0 and 7.0
* player
  - drain outputs at end of song in "single" mode
* Windows
  - fix case insensitive search

ver 0.21.22 (2020/04/02)
* database
  - simple: optimize startup
* input
  - curl: fix streaming errors on Android
* playlist
  - rss: support MIME type application/xml
* mixer
  - android: new mixer plugin for "sles" output
* Android
  - TV support
* Windows
  - fix time zone offset check
* fix build failures with uClibc-ng

ver 0.21.21 (2020/03/19)
* configuration
  - fix bug in "metadata_to_use" setting
* playlist
  - asx, xspf: fix corrupt tags in the presence of XML entities
* archive
  - iso9660: skip empty file names to work around libcdio bug
* decoder
  - gme: ignore empty tags
* output
  - solaris: port to NetBSD
* raise default "max_connections" value to 100

ver 0.21.20 (2020/02/16)
* decoder
  - audiofile, ffmpeg, sndfile: handle MIME type "audio/wav"
  - ffmpeg: fix playback of AIFF and TTA
  - vorbis, opus: fix seeking in small files
* fix backwards seeking on ARM (and other non-x86 CPUs)

ver 0.21.19 (2020/01/17)
* configuration
  - allow overriding top-level settings in includes
* output
  - pulse: obey Pulse's maximum sample rate (fixes DSD128 playback)
* fix build failure with clang 10
* fix build failure with Android NDK r20